Added check on file size according with dicom.properties
using the new 'dicom.max.size' property

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -305,6 +305,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeproperty                = A file in the folder is too big. Please set 'dicom.max.size' into dicom.properties
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
@@ -328,6 +329,7 @@ angal.dicom.manager.err                                                         
 angal.dicom.noconn                                                               = Unable to establish connection to the database
 angal.dicom.nofile                                                               = Configuration file not found
 angal.dicom.open.txt                                                             = Open DICOM
+angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty                         = The file is too big. Please set 'dicom.max.size' into dicom.properties
 angal.dicom.thumbnail.age                                                        = Age
 angal.dicom.thumbnail.category                                                   = Category
 angal.dicom.thumbnail.modality                                                   = Modality
@@ -336,6 +338,7 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicom.unknownsizeformatpleasesetdicommaxsizeproperty                       = Unknown size format, please set 'dicom.max.size' value into dicom.properties
 angal.dicomtype.codem                                                            = Code
 angal.dicomtype.codemaxchars                                                     = Code (max 3 chars)
 angal.dicomtype.codetoolongmaxchars                                              = Code too long (max 3 chars)
