--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -76,9 +76,8 @@ angal.admission.levelisunknown                                                  
 angal.admission.male                                                             = Maschio
 angal.admission.malnutrition                                                     = Malnutrizione
 angal.admission.malnutritioncontrol                                              = Controllo malnutrizione
-angal.admission.maternity                                                        = MATERNITA'
-angal.admission.profession                                                       = Professione
 angal.admission.maritalstatus                                                    = Stato Civile
+angal.admission.maternity                                                        = MATERNITA'
 angal.admission.merge                                                            = Unisci
 angal.admission.motherisalive                                                    = Madre viva
 angal.admission.motherisdead                                                     = Madre morta
@@ -157,6 +156,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = Povero
 angal.admission.positive                                                         = Positivo
 angal.admission.present                                                          = presente
+angal.admission.profession                                                       = Professione
 angal.admission.progressiveinyear                                                = Progressivo in anni *
 angal.admission.result                                                           = ESITO
 angal.admission.rich                                                             = Ricco
@@ -305,6 +305,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeproperty                = Un file nella cartella è troppo grande. Settare 'dicom.max.size' nel file dicom.properties
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Sei sicuro di voler eliminare il file?
 angal.dicom.delete.title                                                         = Conferma eliminazione
@@ -328,6 +329,7 @@ angal.dicom.manager.err                                                         
 angal.dicom.noconn                                                               = Impossibile stabilire la connessione con il database
 angal.dicom.nofile                                                               = File di configurazione non trovato
 angal.dicom.open.txt                                                             = Apri DICOM
+angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty                         = Il file è troppo grande. Settare 'dicom.max.size' nel file dicom.properties
 angal.dicom.thumbnail.age                                                        = Età
 angal.dicom.thumbnail.category                                                   = Tipologia
 angal.dicom.thumbnail.modality                                                   = Modalità
@@ -336,6 +338,7 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Numero serie
 angal.dicom.thumbnail.study                                                      = Studio
 angal.dicom.title                                                                = Visualizzatore DICOM
+angal.dicom.unknownsizeformatpleasesetdicommaxsizeproperty                       = Formato non conosciuto, settare 'dicom.max.size' nel file dicom.properties
 angal.dicomtype.codem                                                            = Codice
 angal.dicomtype.codemaxchars                                                     = Codice (max 3 caratteri)
 angal.dicomtype.codetoolongmaxchars                                              = Codice troppo lungo (max 3 caratteri)
@@ -1169,8 +1172,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = Nuova registrazione OPD
 angal.opd.newpatient                                                             = <Inserire un nuovo paziente>
 angal.opd.nextkin                                                                = Parente più vicino
+angal.opd.nextvisitdate                                                          = Data prossima visita
 angal.opd.nonote                                                                 = <nessuna>
 angal.opd.noteandsymptom                                                         = Note & Sintomi
+angal.opd.notpasseddate                                                          = Non puoi impostare una data nel passato come prossima visita
 angal.opd.notspecified                                                           = non specificato
 angal.opd.on                                                                     = il
 angal.opd.opdnumber                                                              = OPD Nr.
@@ -1198,8 +1203,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sesso
 angal.opd.sexm                                                                   = SESSO
 angal.opd.visitdate                                                              = Data Visita
-angal.opd.nextvisitdate                                                          = Data prossima visita
-angal.opd.notpasseddate                                                          = Non puoi impostare una data nel passato come prossima visita
 angal.operation.allm                                                             = TUTTI
 angal.operation.codetoolongmaxchars                                              = Codice troppo lungo (max 10 caratteri)
 angal.operation.deleteoperation                                                  = Elimina intervento
@@ -1258,25 +1261,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Data di nascita
 angal.patient.bloodtype                                                          = Gruppo Sanguigno
 angal.patient.bloodtype.unknown                                                  = Sconosciuto
-angal.patient.profession                                                         = Professione
-angal.patient.profession.farming                                                 = Agricoltura
-angal.patient.profession.construction                                            = Edilizia
-angal.patient.profession.mining                                                  = Miniera
-angal.patient.profession.engineering                                             = Ingegneria
-angal.patient.profession.medicine                                                = Medicina
-angal.patient.profession.foodhospitality                                         = Ristorazione
-angal.patient.profession.homemaker                                               = Casalinga
-angal.patient.profession.mechanic                                                = Meccanica
-angal.patient.profession.business                                                = Business
-angal.patient.profession.janitorial                                              = Assistenza Sociale
-angal.patient.profession.other                                                   = Altro
-angal.patient.profession.unknown                                                 = Sconosciuto
-angal.patient.maritalstatus                                                      = Stato Civile
-angal.patient.maritalstatusunknown                                               = Sconosciuto
-angal.patient.maritalstatusdivorced                                              = Divorziato
-angal.patient.maritalstatuswidowed                                               = Vedovo
-angal.patient.maritalstatusmarried                                               = Sposato
-angal.patient.maritalstatussingle                                                = Singolo
 angal.patient.city                                                               = Città
 angal.patient.confirmage                                                         = Confermi l'età inserita?
 angal.patient.confirmdeletion                                                    = Conferma eliminazione
@@ -1304,6 +1288,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = Inserire Età valida
 angal.patient.loadfile                                                           = Carica File
 angal.patient.male                                                               = Maschio
+angal.patient.maritalstatus                                                      = Stato Civile
+angal.patient.maritalstatusdivorced                                              = Divorziato
+angal.patient.maritalstatusmarried                                               = Sposato
+angal.patient.maritalstatussingle                                                = Singolo
+angal.patient.maritalstatusunknown                                               = Sconosciuto
+angal.patient.maritalstatuswidowed                                               = Vedovo
 angal.patient.merge.title                                                        = Fondi Paziente
 angal.patient.modeage                                                            = Età
 angal.patient.modebdate                                                          = Data di nascita
@@ -1324,6 +1314,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = Eliminata
 angal.patient.photonotdeleted                                                    = Photo non eliminata
 angal.patient.poor                                                               = Povero
+angal.patient.profession                                                         = Professione
+angal.patient.profession.business                                                = Business
+angal.patient.profession.construction                                            = Edilizia
+angal.patient.profession.engineering                                             = Ingegneria
+angal.patient.profession.farming                                                 = Agricoltura
+angal.patient.profession.foodhospitality                                         = Ristorazione
+angal.patient.profession.homemaker                                               = Casalinga
+angal.patient.profession.janitorial                                              = Assistenza Sociale
+angal.patient.profession.mechanic                                                = Meccanica
+angal.patient.profession.medicine                                                = Medicina
+angal.patient.profession.mining                                                  = Miniera
+angal.patient.profession.other                                                   = Altro
+angal.patient.profession.unknown                                                 = Sconosciuto
 angal.patient.quality                                                            = Qualità
 angal.patient.rich                                                               = Ricco
 angal.patient.searchpatient                                                      = Cerca Paziente
