--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -292,6 +292,7 @@ angal.common.save                                                               
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
 angal.common.to                                                                  = To
+angal.common.uom.kg                                                              = kg
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
