--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -288,7 +288,18 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Speichern
 angal.common.savem                                                               = SPEICHERN
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Dies könnte abzurufen eine große Menge von Daten, vorgehen?
+angal.common.thisvaluecannotbegreaterthan                                        = Dieser wert kann nicht größer als sein 
+angal.common.thisvaluecannotbelesserthan                                         = Dieser wert darf nicht kleiner sein als 
 angal.common.to                                                                  = To
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Nein
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
@@ -318,6 +329,13 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicomtype.codem                                                            = Code
+angal.dicomtype.codemaxchars                                                     = Code (max. 3 Stellen)
+angal.dicomtype.codetoolongmaxchars                                              = Code zu lang (max. 3 Stellen)
+angal.dicomtype.deleterow                                                        = Zeile löschen
+angal.dicomtype.pleaseinsertacode                                                = Bitte geben Sie einen Code ein.
+angal.dicomtype.pleaseinsertavaliddescription                                    = Bitte geben Sie eine gültige Beschreibung ein.
+angal.dicomtype.youcannotdeletethisrecord                                        = Diese Daten können nicht gelöscht werden.
 angal.disctype.codem                                                             = Code
 angal.disctype.codemaxchars                                                      = Code (max. 10 Stellen)
 angal.disctype.codetoolongmaxchars                                               = Code zu lang (max. 10 Stellen)
@@ -403,20 +421,36 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Verstopfung
+angal.examination.bowel.diarrheal                                                = Durchfall
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regulär
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anurie
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hämaturie
+angal.examination.diuresis.nocturia                                              = Nykturie
+angal.examination.diuresis.oliguria                                              = Oligurien
+angal.examination.diuresis.physiological                                         = Physiologisch
+angal.examination.diuresis.pyuria                                                = Pyurie
+angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Größe
 angal.examination.heightabbr                                                     = (Gr)
+angal.examination.hemoglucosetest                                                = Hämo-Glukosetest
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
+angal.examination.pleaseinsertavalidboweldescription                             = Bitte geben Sie eine gültige Beschreibung für den Darm ein
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Bitte geben Sie eine gültige Diuresis-Beschreibung ein
 angal.examination.saturation                                                     = Sättigung
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperatur
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
-angal.examination.tooltip.togglearterialpressureexamination                      = Enable / Disable examination Blood Pressure
-angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
-angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
-angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
+angal.examination.tooltip.toggleexamination                                      = Prüfung aktivieren / deaktivieren
 angal.examination.weight                                                         = Gewicht
 angal.examination.weightabbr                                                     = (Ge)
 angal.exams.find                                                                 = Suche
@@ -503,6 +537,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Tupfer
 angal.lab.tissues                                                                = Tessuti
 angal.lab.to                                                                     = bis
+angal.lab.undefined                                                              = Nicht definiert
 angal.lab.unknownprocedure                                                       = Unbekanntes Verfahren
 angal.lab.urine                                                                  = Urin
 angal.labnew.changepatient                                                       = Change Patient
