--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -293,7 +293,19 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
+angal.common.thisvaluecannotbegreaterthan                                        = This value cannot be greater than 
+angal.common.thisvaluecannotbelesserthan                                         = This value cannot be lesser than 
 angal.common.to                                                                  = To
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
+angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeproperty                = A file in the folder is too big. Please set 'dicom.max.size' into dicom.properties
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
@@ -313,16 +325,30 @@ angal.dicom.image.zoom                                                          
 angal.dicom.load.err                                                             = The file is not in DICOM format
 angal.dicom.load.txt                                                             = Load DICOM
 angal.dicom.loading                                                              = Loading...
+angal.dicom.manager.err                                                          = Generic Error
 angal.dicom.noconn                                                               = Unable to establish connection to the database
 angal.dicom.nofile                                                               = Configuration file not found
 angal.dicom.open.txt                                                             = Open DICOM
+angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty                         = The file is too big. Please set 'dicom.max.size' into dicom.properties
 angal.dicom.thumbnail.age                                                        = Age
+angal.dicom.thumbnail.category                                                   = Category
 angal.dicom.thumbnail.modality                                                   = Modality
 angal.dicom.thumbnail.patient                                                    = Patient
 angal.dicom.thumbnail.series                                                     = Series
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicom.unknownsizeformatpleasesetdicommaxsizeproperty                       = Unknown size format, please set 'dicom.max.size' value into dicom.properties
+angal.dicomtype.codem                                                            = Code
+angal.dicomtype.codemaxchars                                                     = Code (max 3 chars)
+angal.dicomtype.codetoolongmaxchars                                              = Code too long (max 3 chars)
+angal.dicomtype.deleterow                                                        = Delete row
+angal.dicomtype.dicomtypebrowsing                                                = Dicom type browsing
+angal.dicomtype.editingdicomtyperecord                                           = Editing Dicom Type record
+angal.dicomtype.newdicomtyperecord                                               = New Dicom type record
+angal.dicomtype.pleaseinsertacode                                                = Please insert a code
+angal.dicomtype.pleaseinsertavaliddescription                                    = Please insert a valid description
+angal.dicomtype.youcannotdeletethisrecord                                        = You can not delete this record
 angal.disctype.codem                                                             = Code
 angal.disctype.codemaxchars                                                      = Code (max 10 chars)
 angal.disctype.codetoolongmaxchars                                               = Code too long (max 10 chars)
@@ -400,6 +426,15 @@ angal.examination.ap.max                                                        
 angal.examination.ap.min                                                         = min
 angal.examination.arterialpressure                                               = Arterial Pressure
 angal.examination.arterialpressureabbr                                           = AP
+angal.examination.auscultation                                                   = Auscultation
+angal.examination.auscultation.bronchial                                         = Bronchial
+angal.examination.auscultation.crackles                                          = Crackles
+angal.examination.auscultation.normal                                            = Normal (Vescicular)
+angal.examination.auscultation.rhonchi                                           = Rhonchi
+angal.examination.auscultation.stridor                                           = Stridor
+angal.examination.auscultation.unknown                                           = Unknown
+angal.examination.auscultation.wheezes                                           = Wheezes
+angal.examination.auscultationabbr                                               = AUSC
 angal.examination.bmi                                                            = BMI
 angal.examination.bmi.normalweight                                               = Normal weight
 angal.examination.bmi.obesityclassiiisevere                                      = Obesity Class III (severe)
@@ -408,20 +443,40 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Constipation
+angal.examination.bowel.diarrheal                                                = Diarrheal
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regular
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anuria
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hematuria
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Physiological
+angal.examination.diuresis.pyuria                                                = Pyuria
+angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Height
 angal.examination.heightabbr                                                     = (H)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
+angal.examination.pleaseinsertavalidauscultationdescription                      = Please insert a valid Auscultation description
+angal.examination.pleaseinsertavalidboweldescription                             = Please insert a valid Bowel description
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Please insert a valid Diuresis description
+angal.examination.respiratoryrate                                                = Respiratory Rate
+angal.examination.respiratoryrateabbr                                            = RR
+angal.examination.respiratoryrateunit                                            = bpm
 angal.examination.saturation                                                     = Saturation
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperature
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
-angal.examination.tooltip.togglearterialpressureexamination                      = Enable / Disable examination Blood Pressure
-angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
-angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
-angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
+angal.examination.tooltip.toggleexamination                                      = Enable / Disable examination
 angal.examination.weight                                                         = Weight
 angal.examination.weightabbr                                                     = (W)
 angal.exams.find                                                                 = Search
@@ -508,6 +563,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Swabs
 angal.lab.tissues                                                                = Tissues
 angal.lab.to                                                                     = To
+angal.lab.undefined                                                              = Undefined
 angal.lab.unknownprocedure                                                       = Unknown Procedure
 angal.lab.urine                                                                  = Urine
 angal.labnew.changepatient                                                       = Change Patient
@@ -877,6 +933,7 @@ angal.menu.btn.chat                                                             
 angal.menu.btn.deliverytype                                                      = Delivery Type
 angal.menu.btn.delresulttype                                                     = Delivery Result Type
 angal.menu.btn.dicom                                                             = DICOM Patient
+angal.menu.btn.dicomtype                                                         = Dicom Type
 angal.menu.btn.disctype                                                          = Discharge Type
 angal.menu.btn.disease                                                           = Disease
 angal.menu.btn.diseaselist                                                       = Disease List
@@ -934,6 +991,7 @@ angal.menu.deliverytype                                                         
 angal.menu.delresulttype                                                         = DeliveryResult
 angal.menu.descm                                                                 = DESC
 angal.menu.dicom                                                                 = DICOM Patient
+angal.menu.dicomtype                                                             = Dicom Type
 angal.menu.disctype                                                              = Discharge Type
 angal.menu.disease                                                               = Disease
 angal.menu.diseaselist                                                           = DiseaseList
@@ -1176,6 +1234,9 @@ angal.operation.select                                                          
 angal.operation.selecttype                                                       = Select type
 angal.operation.type                                                             = Type
 angal.operation.typem                                                            = TYPE
+angal.operation.result.sucess                                                    = Success
+angal.operation.result.failure                                                   = Failure
+angal.operation.result.undefined                                                 = Unknown
 angal.operationrowedit.cancel                                                    = Cancel
 angal.operationrowedit.new                                                       = New
 angal.operationrowedit.operation                                                 = Operation
