Forced to use com.sun.imageio.plugins.jpeg.JPEGImageReader
the com.sun.media.imageioimpl.plugins.jpeg.CLibJPEGImageReader
provided by dcm4che library was unstable

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -338,6 +338,7 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicom.unknownformat                                                        = Unknown file format, please inform the developers
 angal.dicom.unknownsizeformatpleasesetdicommaxsizeproperty                       = Unknown size format, please set 'dicom.max.size' value into dicom.properties
 angal.dicomtype.codem                                                            = Code
 angal.dicomtype.codemaxchars                                                     = Code (max 3 chars)
@@ -1230,13 +1231,13 @@ angal.operation.operationalreadypresent                                         
 angal.operation.operationsbrowser                                                = Operations browser
 angal.operation.pleaseinsertacode                                                = Please insert a code
 angal.operation.pleaseinsertavaliddescription                                    = Please insert a valid description
+angal.operation.result.failure                                                   = Failure
+angal.operation.result.sucess                                                    = Success
+angal.operation.result.undefined                                                 = Unknown
 angal.operation.select                                                           = Select
 angal.operation.selecttype                                                       = Select type
 angal.operation.type                                                             = Type
 angal.operation.typem                                                            = TYPE
-angal.operation.result.sucess                                                    = Success
-angal.operation.result.failure                                                   = Failure
-angal.operation.result.undefined                                                 = Unknown
 angal.operationrowedit.cancel                                                    = Cancel
 angal.operationrowedit.new                                                       = New
 angal.operationrowedit.operation                                                 = Operation
