--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -338,6 +338,7 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Numero serie
 angal.dicom.thumbnail.study                                                      = Studio
 angal.dicom.title                                                                = Visualizzatore DICOM
+angal.dicom.unknownformat                                                        = Formato sconosciuto, informare gli sviluppatori
 angal.dicom.unknownsizeformatpleasesetdicommaxsizeproperty                       = Formato non conosciuto, settare 'dicom.max.size' nel file dicom.properties
 angal.dicomtype.codem                                                            = Codice
 angal.dicomtype.codemaxchars                                                     = Codice (max 3 caratteri)
@@ -1218,13 +1219,13 @@ angal.operation.operationalreadypresent                                         
 angal.operation.operationsbrowser                                                = Lista Interventi
 angal.operation.pleaseinsertacode                                                = Prego inserire un codice
 angal.operation.pleaseinsertavaliddescription                                    = Prego inserire una descrizione valida
+angal.operation.result.failure                                                   = Fallimento
+angal.operation.result.sucess                                                    = Successo
+angal.operation.result.undefined                                                 = Incerto
 angal.operation.select                                                           = Seleziona
 angal.operation.selecttype                                                       = Seleziona Tipologia
 angal.operation.type                                                             = Tipologia
 angal.operation.typem                                                            = TIPOLOGIA
-angal.operation.result.sucess                                                    = Successo
-angal.operation.result.failure                                                   = Fallimento
-angal.operation.result.undefined                                                 = Incerto
 angal.operationrowedit.cancel                                                    = Annulla
 angal.operationrowedit.new                                                       = Nuovo
 angal.operationrowedit.operation                                                 = Interventi
