Added new changelog
Op 171 vezo 2 examination window changes (#82)

* OP-171 #comment added UoM to Saturation parameter #time 30min
* Re-mapped Examination module with immutable nullable types and set default temperature = 36°C
* Added new component ScaledJSlider in order to handle decimal values.
- SAT_MAX deprecated (it is always 100)
- HEIGHT_STEP default set to 1 (cm)
* PatientExamination refactoring and settings
- Fixed UoM: removed user defined UoM and adopted SI (Kg for the Weight
and meter for the Height)
- Renamed some DB fields names
* OP-171 #comment moving summary to the bottom
* Changed Summary panel with a JTable
* OP-171 #comment added input fields validations and tabbing
* OP-171 Added automatic conversion of not alphanumeric characters to the regional setting decimal separator in double e float fields
* OP-171 #comment added Remove button
* OP-171 #comment Changed [IT] Sintomi to [IT] Note
* Improved jCheckBoxes focus painting
* Moved getBMIdescription() method to Manager
* Removed unused variable
* Renamed one variable
* Fixed one label [AR][PT]
* OP-171 #comment added InputVerifier for all textfields
* OP-171 #comment Added new fields HGT, Diuresis and Bowel and moved Notes panel to the right

Op 173 vezo 4 new dicom features (#84)

* First version of JPEG compatibility in DICOM module
* Added new Dialog upon dicom/images loading
* Added Dicom Type gui with translations
* Linked DicomType to gui

TODO:
- possibility to add images to the same series
- handle big size images (IndexOutOfBoundsException

Updated OH-gui and OH-core artifacts versions

Uploaded new changelog

Updated version.properties

Reset default data

point 1/11/10 resolved

point 1/11/10 resolved

Fixed "Wheight"

Externalized translations

Changed with checkbox

Changed with checkbox fixed report

Used Spring application context

Aligned reports to 1.9.1

added choise of examination to print

fixed modal clinical sheet report

Added in Table OPERATION OPE_FOR- added differenziati

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -289,6 +289,7 @@ angal.common.notapplicable                                                      
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
 angal.common.pleaseselectarow                                                    = Please select a row
+angal.common.print                                                               = Print
 angal.common.quantity                                                            = Quantity
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
@@ -831,6 +832,10 @@ angal.medicalstockward.outcome.destination                                      
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
 angal.medicalstockward.patient                                                   = Patient
+angal.medicalstockward.patient.date                                              = Date
+angal.medicalstockward.patient.decription                                        = Drug
+angal.medicalstockward.patient.quantity                                          = Quantity
+angal.medicalstockward.patient.units                                             = Units
 angal.medicalstockward.pieces                                                    = \ pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Please select an Outcomes movement first
 angal.medicalstockward.purpose                                                   = Purpose
@@ -1228,6 +1233,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NAME
 angal.operation.newoperationrecord                                               = New operation record
 angal.operation.operationalreadypresent                                          = Operation already present
+angal.operation.operationcontext                                                 = Context
 angal.operation.operationsbrowser                                                = Operations browser
 angal.operation.pleaseinsertacode                                                = Please insert a code
 angal.operation.pleaseinsertavaliddescription                                    = Please insert a valid description
@@ -1362,6 +1368,7 @@ angal.patient.unknown                                                           
 angal.patient.veryoldpatient                                                     = Very old patient
 angal.patient.yes                                                                = Yes
 angal.patientbill.find                                                           = Find
+angal.patientfolder.tab.drugs                                                    = Drugs
 angal.patientfolder.tab.exams                                                    = Exams
 angal.patientfolder.tab.operations                                               = Operations
 angal.patvac.age                                                                 = Age
