--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1204,6 +1204,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NOM
 angal.operation.newoperationrecord                                               = Nouvelle voix d'intervention
 angal.operation.operationalreadypresent                                          = Intervention déjé présente
+angal.operation.operationcontext                                                 = Contexte
 angal.operation.operationsbrowser                                                = Liste Interventions
 angal.operation.pleaseinsertacode                                                = Insérez un code
 angal.operation.pleaseinsertavaliddescription                                    = Insérez une description valide
