--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1216,6 +1216,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NOME
 angal.operation.newoperationrecord                                               = Nuova voce di Intervento
 angal.operation.operationalreadypresent                                          = Intervento già presente
+angal.operation.operationcontext                                                 = Contesto
 angal.operation.operationsbrowser                                                = Lista Interventi
 angal.operation.pleaseinsertacode                                                = Prego inserire un codice
 angal.operation.pleaseinsertavaliddescription                                    = Prego inserire una descrizione valida
