--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -1197,6 +1197,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NOME
 angal.operation.newoperationrecord                                               = Novo registro de operação
 angal.operation.operationalreadypresent                                          = Operação já está presente
+angal.operation.operationcontext                                                 = Contexto
 angal.operation.operationsbrowser                                                = Navegador de operações
 angal.operation.pleaseinsertacode                                                = Por favor, insira um código
 angal.operation.pleaseinsertavaliddescription                                    = Por favor, insira uma descrição válida
