Changed the logic for rectify using lots
- Saving new lots only on confirm (OK button)
- Improved layout with new lot quantity label (different from stock)
- Used LOTWITCOST parameter and avoid total cost input from user (final
quantity not known)

--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -815,11 +815,14 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Motivo
 angal.medicalstockward.rectify                                                   = Rettifica
 angal.medicalstockward.rectify.actualquantity                                    = Quantità attuale
+angal.medicalstockward.rectify.inlot                                             = Nel lotto
+angal.medicalstockward.rectify.instock                                           = In magazzino
 angal.medicalstockward.rectify.medical                                           = Farmaco
 angal.medicalstockward.rectify.pieces                                            = pezzi
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Selezionare un farmaco
 angal.medicalstockward.rectify.pleasespecifythereason                            = Specificare il motivo
 angal.medicalstockward.rectify.reason                                            = Motivo
+angal.medicalstockward.rectify.thiswillemptythelotproceed                        = Questa operazione svuoterà il lotto selezionato, procedere?
 angal.medicalstockward.rectify.title                                             = Rettifica
 angal.medicalstockward.report                                                    = Report
 angal.medicalstockward.reset                                                     = Azzera
@@ -868,7 +871,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Rimuove il paziente associato a questo movimento
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Aggiornare Età e Peso per questo Paziente?
 angal.medicalstockwardedit.weight                                                = Peso
-angal.medicalstockwardrectify.instock                                            = In magazzino
 angal.medstockmovtype.codemaxchars                                               = Codice (max 10 caratteri)
 angal.medstockmovtype.codetoolongmaxchars                                        = Codice troppo lungo (max 10 caratteri)
 angal.medstockmovtype.deletemovementtype                                         = Elimina tipologia movimento
