Improved oldest date guessing in Clinical Sheet
Some code cleaning

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -285,6 +285,7 @@ angal.common.from                                                               
 angal.common.hours                                                               = Hours
 angal.common.minutes                                                             = Minutes
 angal.common.new                                                                 = New
+angal.common.nodatatoshow                                                        = No data to show
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
