--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -285,6 +285,7 @@ angal.common.from                                                               
 angal.common.hours                                                               = Ore
 angal.common.minutes                                                             = Minuti
 angal.common.new                                                                 = Nuovo
+angal.common.nodatatoshow                                                        = Nessun dato da mostrare
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
