Added Operations and Laboratories to Clinical Sheet
and simplified sections selection logic

--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1352,6 +1352,7 @@ angal.patient.unknown                                                           
 angal.patient.veryoldpatient                                                     = Paziente molto vecchio
 angal.patient.yes                                                                = Si
 angal.patientbill.find                                                           = Trova
+angal.patientfolder.reportfor                                                    = Report per
 angal.patientfolder.tab.exams                                                    = Esami
 angal.patientfolder.tab.operations                                               = Operazioni
 angal.patvac.age                                                                 = Età
