--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1369,6 +1369,7 @@ angal.patient.unknown                                                           
 angal.patient.veryoldpatient                                                     = Very old patient
 angal.patient.yes                                                                = Yes
 angal.patientbill.find                                                           = Find
+angal.patientfolder.reportfor                                                    = Report for
 angal.patientfolder.tab.drugs                                                    = Drugs
 angal.patientfolder.tab.exams                                                    = Exams
 angal.patientfolder.tab.operations                                               = Operations
