ADWA_01-10-11 Clinical Sheet Categories (#161)
ADWA_01-10-11 Clinical Sheet Categories, Operations in OPD and Examination report (triage)

--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -285,6 +285,7 @@ angal.common.from                                                               
 angal.common.hours                                                               = Ore
 angal.common.minutes                                                             = Minuti
 angal.common.new                                                                 = Nuovo
+angal.common.nodatatoshow                                                        = Nessun dato da mostrare
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
@@ -1216,6 +1217,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NOME
 angal.operation.newoperationrecord                                               = Nuova voce di Intervento
 angal.operation.operationalreadypresent                                          = Intervento già presente
+angal.operation.operationcontext                                                 = Contesto
 angal.operation.operationsbrowser                                                = Lista Interventi
 angal.operation.pleaseinsertacode                                                = Prego inserire un codice
 angal.operation.pleaseinsertavaliddescription                                    = Prego inserire una descrizione valida
@@ -1350,6 +1352,7 @@ angal.patient.unknown                                                           
 angal.patient.veryoldpatient                                                     = Paziente molto vecchio
 angal.patient.yes                                                                = Si
 angal.patientbill.find                                                           = Trova
+angal.patientfolder.reportfor                                                    = Report per
 angal.patientfolder.tab.exams                                                    = Esami
 angal.patientfolder.tab.operations                                               = Operazioni
 angal.patvac.age                                                                 = Età
